--- a/src/componets/CompoList/index.scss
+++ b/src/componets/CompoList/index.scss
@@ -66,6 +66,7 @@
       border: none;
       border-radius: 5px;
       background-color: #fb6666;
+      cursor: pointer;
     }
 
     .work-data {
